# kirocli-chatbot-gateway

./: .env.example  .gitignore  README.md  README.zh-CN.md  acp_client.py  config.py  discord_policy.example.json  gateway.py  kiro-gateway.service.example  main.py  pyproject.toml
adapters/: __init__.py  base.py  discord.py  feishu.py
