[project]
name = "kirocli-bot-gateway"
version = "0.1.0"
description = "Multi-platform bot gateway for Kiro CLI via ACP protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.4.2",
    "python-dotenv>=1.0.0",
    "discord.py>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
